k8s/applications/frontend/portal/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-portal-ingress
  labels:
    env: production
    tier: frontend
    app: portal
    name: frontend-portal-ingress
spec:
  rules:
    - host: <프론트엔드 포털 도메인> # TODO
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-portal
              servicePort: 3000
